--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -6,15 +7,16 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #00a7e1;
-  --ifm-color-primary-dark: #0096cb;
-  --ifm-color-primary-darker: #008ebf;
-  --ifm-color-primary-darkest: #00759e;
-  --ifm-color-primary-light: #00b8f8;
-  --ifm-color-primary-lighter: #04beff;
-  --ifm-color-primary-lightest: #25c7ff;
+  --ifm-color-primary: #005cb9;
+  --ifm-color-primary-dark: #0053a7;
+  --ifm-color-primary-darker: #004e9d;
+  --ifm-color-primary-darkest: #034d8a;
+  --ifm-color-primary-light: #0065cb;
+  --ifm-color-primary-lighter: #008aaf;
+  --ifm-color-primary-lightest: #00a7e1;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-family-base: 'Lora', serif;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +29,61 @@
   --ifm-color-primary-lighter: #04beff;
   --ifm-color-primary-lightest: #25c7ff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+/*Increase default font size*/
+@media screen and (max-width: 996px) {
+  :root {
+    --ifm-font-size-base: 18px;
+  }
+  article header h1 {
+    font-size: 1.5rem !important;
+  }
+}
+
+@media screen and (min-width: 997px) {
+  :root {
+    --ifm-font-size-base: 17px;
+  }
+  article header h1 {
+    font-size: 2rem !important;
+  }
+}
+
+/*Change hero__title to use Playfair Display*/
+.hero .hero__title {
+  font-family: 'Playfair Display', serif;
+  font-size: 3.5rem;
+}
+
+/*Change hero__subtitle to use Source Sans 3*/
+.hero .hero__subtitle {
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+/*Change navbar__title to use Source Sans 3*/
+.navbar__title {
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+/*Change navbar__link to use Source Sans 3*/
+.navbar__link {
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+/*Change button to use Source Sans 3*/
+.button {
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+/*Change footer color to match primary*/
+.footer {
+  background-color: var(--ifm-color-primary-lightest);
+}
+
+/*Change footer__copyright to use Source Sans 3*/
+.footer__copyright {
+  font-family: 'Source Sans 3', sans-serif;
+  font-weight: 600;
+  color: #fff;
 }
